Add feat map leftlet fix profile