@@ -1,6 +1,7 @@
 package com.techup.spring_demo.security;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -15,6 +16,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -24,42 +26,52 @@ public class SecurityConfig {
     @Autowired
     private JwtAuthFilter jwtAuthFilter;
 
-    // 💡 ตัวเข้ารหัสผ่าน (จำเป็นต้องมีใน Spring Security)
+    // ✅ [Security Fix #5] อ่าน CORS origins จาก environment variable
+    // ตอน dev จะเป็น http://localhost:5173
+    // ตอน production ให้เซ็ต CORS_ALLOWED_ORIGINS=https://yourdomain.com
+    @Value("${app.cors.allowed-origins:http://localhost:5173,https://localhost:5173}")
+    private String allowedOrigins;
+
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // 💡 กฎระเบียบของระบบเรา
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // อนุญาตหน้าบ้านต่อเข้ามา
-            .csrf(csrf -> csrf.disable()) // ปิดระบบกันแฮ็กแบบเก่า (เพราะเราใช้ JWT แล้ว)
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // ไม่ใช้ Session แบบดั้งเดิม
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable())
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // 🟢 โซนฟรี (ไม่ต้องมี Token ก็เข้าได้)
-                .requestMatchers("/api/users/login", "/api/users/register").permitAll() // สมัคร/ล็อกอิน
-                .requestMatchers(HttpMethod.GET, "/api/trips/**").permitAll() // อ่านทริป
-                .requestMatchers(HttpMethod.GET, "/api/users/**").permitAll() // ดูโปรไฟล์คนอื่น
-                .requestMatchers("/api/users/google-login").permitAll()
-                // 🔴 โซนหวงห้าม (ที่เหลือทั้งหมด เช่น สร้างทริป, คอมเมนต์ ต้องมี Token!)
+                // ✅ อนุญาต OPTIONS preflight ทุก URL — browser ส่งมาก่อน POST เสมอ
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                // 🟢 โซนฟรี
+                .requestMatchers(HttpMethod.POST, "/api/users/google-login").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/users/facebook-login").permitAll()
+                .requestMatchers("/api/users/login", "/api/users/register").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/trips/**").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/users/**").permitAll()
+                // 🔴 โซนหวงห้าม
                 .anyRequest().authenticated()
             );
 
-        // นำ รปภ. (JwtAuthFilter) ไปยืนดักไว้ก่อนถึงประตูเข้า Controller
         http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
         return http.build();
     }
 
-    // 💡 ตั้งค่า CORS ให้หน้าบ้าน (Vue.js) เรียก API ได้
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // URL ของหน้าบ้าน
+
+        // ✅ [Security Fix #5] รองรับหลาย origins โดยอ่านจาก env (คั่นด้วย comma)
+        // เช่น CORS_ALLOWED_ORIGINS=https://app.com,https://www.app.com
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
